@@ -1,46 +1,161 @@
+import org.elasticsearch.hadoop.gradle.scala.SparkVariantPlugin
 
 description = "Elasticsearch Spark (for Spark 1.3-1.6)"
-
-evaluationDependsOn(':elasticsearch-hadoop-mr')
 
 apply plugin: 'java-library'
 apply plugin: 'scala'
 apply plugin: 'es.hadoop.build'
-apply plugin: 'scala.variants'
+apply plugin: 'spark.variants'
 
-variants {
-    defaultVersion '2.11.12'
-    targetVersions '2.10.7', '2.11.12'
-}
+sparkVariants {
+    capabilityGroup 'org.elasticsearch.spark.sql.variant'
+    setDefaultVariant "spark13scala211", spark13Version, scala211Version
+    addFeatureVariant "spark13scala210", spark13Version, scala210Version
 
-println "Compiled using Scala ${project.ext.scalaMajorVersion} [${project.ext.scalaVersion}]"
-String sparkVersion = spark13Version
+    all { SparkVariantPlugin.SparkVariant variant ->
+        String scalaCompileTaskName = project.sourceSets
+                .getByName(variant.getSourceSetName('main'))
+                .getCompileTaskName('scala')
 
-configurations {
-    embedded {
-        transitive = false
-        canBeResolved = true
-    }
-    implementation {
-        extendsFrom project.configurations.embedded
-    }
-    if (project.ext.scalaMajorVersion != '2.10') {
-        scalaCompilerPlugin {
-            defaultDependencies { dependencies ->
-                dependencies.add(project.dependencies.create("com.typesafe.genjavadoc:genjavadoc-plugin_${scalaVersion}:0.13"))
+        project.configurations {
+            create(variant.configuration('embedded')) {
+                transitive = false
+                canBeResolved = true
+            }
+            getByName(variant.configuration('implementation')) {
+                extendsFrom project.configurations.getByName(variant.configuration('embedded'))
+            }
+            getByName(variant.configuration('test', 'implementation')) {
+                exclude group: "org.mortbay.jetty"
+            }
+            getByName(variant.configuration('itest', 'implementation')) {
+                exclude group: "org.mortbay.jetty"
             }
         }
-    }
-    testImplementation {
-        exclude group: "org.mortbay.jetty"
-    }
-    itestImplementation {
-        exclude group: "org.mortbay.jetty"
+
+        project.getTasks().getByName(scalaCompileTaskName) { ScalaCompile compileScala ->
+            configure(compileScala.scalaCompileOptions.forkOptions) {
+                memoryMaximumSize = '1g'
+            }
+            compileScala.scalaCompileOptions.additionalParameters = [
+                    "-feature",
+                    "-unchecked",
+                    "-deprecation",
+                    "-Xfuture",
+                    "-Yno-adapted-args",
+                    "-Ywarn-dead-code",
+                    "-Ywarn-numeric-widen",
+                    "-Xfatal-warnings"
+            ]
+        }
+
+        dependencies {
+            add(variant.configuration('embedded'), project(":elasticsearch-hadoop-mr"))
+            add(variant.configuration('embedded'), project(":elasticsearch-spark")) {
+                capabilities {
+                    requireCapability("org.elasticsearch.spark.variant:$variant.name:$project.version")
+                }
+            }
+
+            add(variant.configuration('api'), "org.scala-lang:scala-library:${variant.scalaVersion}")
+            add(variant.configuration('api'), "org.scala-lang:scala-reflect:${variant.scalaVersion}")
+            add(variant.configuration('api'), "org.apache.spark:spark-core_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'javax.servlet'
+                exclude group: 'org.apache.hadoop'
+            }
+
+            add(variant.configuration('implementation'), "org.apache.spark:spark-sql_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'org.apache.hadoop'
+            }
+            add(variant.configuration('implementation'), "org.apache.spark:spark-streaming_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'org.apache.hadoop'
+            }
+            add(variant.configuration('implementation'), "commons-logging:commons-logging:1.1.1")
+            add(variant.configuration('implementation'), "javax.xml.bind:jaxb-api:2.3.1")
+            add(variant.configuration('implementation'), "org.apache.spark:spark-catalyst_${variant.scalaMajorVersion}:$variant.sparkVersion")
+
+            // Scala compiler needs these for arcane reasons, but they are not used in the api nor the runtime
+            add(variant.configuration('compileOnly'), "com.fasterxml.jackson.core:jackson-annotations:2.6.7")
+            add(variant.configuration('compileOnly'), "com.google.guava:guava:16.0.1")
+            add(variant.configuration('compileOnly'), "org.json4s:json4s-jackson_${variant.scalaMajorVersion}:3.2.11")
+            add(variant.configuration('compileOnly'), "org.slf4j:slf4j-api:1.7.6")
+
+            if ('2.10'.equals(scalaMajorVersion)) {
+                add(variant.configuration('implementation'), "org.apache.spark:spark-unsafe_${variant.scalaMajorVersion}:$variant.sparkVersion")
+                add(variant.configuration('implementation'), "org.apache.avro:avro:1.7.7")
+                add(variant.configuration('implementation'), "log4j:log4j:1.2.17")
+                add(variant.configuration('implementation'), "com.google.code.findbugs:jsr305:2.0.1")
+                add(variant.configuration('implementation'), "org.json4s:json4s-ast_2.10:3.2.10")
+                add(variant.configuration('implementation'), "com.esotericsoftware.kryo:kryo:2.21")
+                add(variant.configuration('compileOnly'), "org.apache.hadoop:hadoop-annotations:${project.ext.hadoopVersion}")
+                add(variant.configuration('compileOnly'), "org.codehaus.jackson:jackson-core-asl:${project.ext.jacksonVersion}")
+                add(variant.configuration('compileOnly'), "org.codehaus.jackson:jackson-mapper-asl:${project.ext.jacksonVersion}")
+                add(variant.configuration('compileOnly'), "org.codehaus.woodstox:stax2-api:3.1.4")
+            }
+
+            add(variant.configuration('test', 'implementation'), project(":test:shared"))
+            add(variant.configuration('test', 'implementation'), "org.apache.spark:spark-core_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'javax.servlet'
+                exclude group: 'org.apache.hadoop'
+            }
+            add(variant.configuration('test', 'implementation'), "org.apache.spark:spark-sql_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'org.apache.hadoop'
+            }
+
+            add(variant.configuration('itest', 'implementation'), project(":test:shared"))
+            add(variant.configuration('itest', 'implementation'), "org.apache.spark:spark-streaming_${variant.scalaMajorVersion}:$variant.sparkVersion") {
+                exclude group: 'org.apache.hadoop'
+            }
+
+            add(variant.configuration('additionalSources'), project(":elasticsearch-hadoop-mr"))
+            add(variant.configuration('javadocSources'), project(":elasticsearch-hadoop-mr"))
+        }
+
+        def javaFilesOnly = { FileTreeElement spec ->
+            spec.file.name.endsWith('.java') || spec.isDirectory()
+        }
+
+        // Add java files from scala source set to javadocSourceElements.
+        project.fileTree("src/main/scala").include(javaFilesOnly).each {
+            project.artifacts.add(variant.configuration('javadocSourceElements'), it)
+        }
+
+        if (variant.scalaMajorVersion != '2.10') {
+            // Configure java source generation for javadoc purposes
+            String generatedJavaDirectory = "$buildDir/generated/java/${variant.name}"
+            Configuration scalaCompilerPlugin = project.configurations.maybeCreate(variant.configuration('scalaCompilerPlugin'))
+            scalaCompilerPlugin.defaultDependencies { dependencies ->
+                dependencies.add(project.dependencies.create("com.typesafe.genjavadoc:genjavadoc-plugin_${variant.scalaVersion}:0.13"))
+            }
+
+            ScalaCompile compileScala = tasks.getByName(scalaCompileTaskName) as ScalaCompile
+            compileScala.scalaCompileOptions.with {
+                additionalParameters = [
+                        "-Xplugin:" + configurations.scalaCompilerPlugin.asPath,
+                        "-P:genjavadoc:out=$buildDir/generated/java".toString()
+                ]
+            }
+
+            // Export generated Java code from the genjavadoc compiler plugin
+            artifacts {
+                add(variant.configuration('javadocSourceElements'), project.file(generatedJavaDirectory)) {
+                    builtBy compileScala
+                }
+            }
+            tasks.getByName(variant.taskName('javadoc')) {
+                dependsOn compileScala
+                source(generatedJavaDirectory)
+            }
+        }
+
+        scaladoc {
+            title = "${rootProject.description} ${version} API"
+        }
     }
 }
 
 // deal with the messy conflicts out there
-configurations.all { Configuration conf ->
+configurations.matching { it.name.contains('CompilerPlugin') == false }.all { Configuration conf ->
     conf.resolutionStrategy {
         eachDependency { details ->
             // in a similar vein, change all javax.servlet artifacts to the one used by Spark
@@ -53,156 +168,32 @@ configurations.all { Configuration conf ->
 }
 
 tasks.withType(ScalaCompile) { ScalaCompile task ->
+    task.scalaCompileOptions.additionalParameters = ["-javabootclasspath", new File(project.ext.runtimeJavaHome, 'jre/lib/rt.jar').absolutePath]
+    task.options.bootstrapClasspath = layout.files(new File(project.ext.runtimeJavaHome, 'jre/lib/rt.jar'))
     task.sourceCompatibility = project.ext.minimumRuntimeVersion
     task.targetCompatibility = project.ext.minimumRuntimeVersion
+    task.options.forkOptions.executable = new File(project.ext.runtimeJavaHome, 'bin/java').absolutePath
 }
 
-compileScala {
-    options.forkOptions.executable = new File(project.ext.runtimeJavaHome, 'bin/java').canonicalPath
-    configure(scalaCompileOptions.forkOptions) {
-        memoryMaximumSize = '1g'
-        jvmArgs = ['-XX:MaxPermSize=512m']
-    }
-    scalaCompileOptions.additionalParameters = [
-        "-feature",
-        "-unchecked",
-        "-deprecation",
-        "-Xfuture",
-        "-Yno-adapted-args",
-        "-Ywarn-dead-code",
-        "-Ywarn-numeric-widen",
-        "-Xfatal-warnings"
-    ]
+if (JavaVersion.current() >= JavaVersion.VERSION_16) {
+    tasks.withType(Test) { Test task ->
+        if (task.getName().startsWith("test"))
+        task.configure {
+            jvmArgs "--add-opens=java.base/java.io=ALL-UNNAMED" // Needed for IOUtils's BYTE_ARRAY_BUFFER reflection
+        }}
 }
 
-String coreSrc = file("$projectDir/../core").absolutePath.replace('\\','/')
-
-sourceSets {
-    main.scala.srcDirs += "$coreSrc/main/scala"
-    test.scala.srcDirs += "$coreSrc/test/scala"
-    itest.java.srcDirs += "$coreSrc/itest/java"
-    itest.scala.srcDirs += "$coreSrc/itest/scala"
-    itest.resources.srcDirs += "$coreSrc/itest/resources"
-}
-
-
-// currently the outside project folders are transformed into linked resources however
-// Gradle only supports one so the project will be invalid as not all sources will be in there
-// as such, they are setup here manually for Eclipse. IntelliJ probably needs a similar approach
-eclipse {
-    project.file.whenMerged { pj ->
-        // eliminated resources created by gradle
-
-        linkedResources.clear()
-        linkedResources.add(new org.gradle.plugins.ide.eclipse.model.Link("core/main/scala", "2", "$coreSrc/main/scala", null))
-        linkedResources.add(new org.gradle.plugins.ide.eclipse.model.Link("core/test/scala", "2", "$coreSrc/test/scala", null))
-        linkedResources.add(new org.gradle.plugins.ide.eclipse.model.Link("core/itest/java", "2", "$coreSrc/itest/java", null))
-        linkedResources.add(new org.gradle.plugins.ide.eclipse.model.Link("core/itest/scala", "2", "$coreSrc/itest/scala", null))
-        linkedResources.add(new org.gradle.plugins.ide.eclipse.model.Link("core/itest/resources","2", "$coreSrc/itest/resources", null))
-
-    }
-    classpath.file {
-        whenMerged { cp ->
-            entries.removeAll { entry ->
-                entry.kind == 'src' && (entry.path in ["scala", "java", "resources"] || entry.path.startsWith("itest-") || entry.path.endsWith("-scala"))
+// Embed the embedded dependencies in the final jar after all configuration is complete
+sparkVariants {
+    all { SparkVariantPlugin.SparkVariant variant ->
+        tasks.getByName(variant.taskName('jar')) {
+            dependsOn(project.configurations.getByName(variant.configuration('embedded')))
+            // TODO: Is there a way to do this lazily? This looks like it resolves the configuration.
+            from(project.configurations.getByName(variant.configuration('embedded')).collect { it.isDirectory() ? it : zipTree(it)}) {
+                include "org/elasticsearch/**"
+                include "esh-build.properties"
+                include "META-INF/services/*"
             }
-
-            entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder("core/main/scala", null))
-            entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder("core/test/scala", null))
-            entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder("core/itest/java", null))
-            entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder("core/itest/scala", null))
-            entries.add(new org.gradle.plugins.ide.eclipse.model.SourceFolder("core/itest/resources", null))
-        }
-    }
-}
-
-dependencies {
-    embedded(project(":elasticsearch-hadoop-mr"))
-
-    api("org.scala-lang:scala-library:${project.ext.scalaVersion}")
-    api("org.scala-lang:scala-reflect:${project.ext.scalaVersion}")
-    api("org.apache.spark:spark-core_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'javax.servlet'
-        exclude group: 'org.apache.hadoop'
-    }
-
-    implementation("org.apache.spark:spark-sql_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'org.apache.hadoop'
-    }
-    implementation("org.apache.spark:spark-streaming_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'org.apache.hadoop'
-    }
-    implementation("commons-logging:commons-logging:1.1.1")
-    implementation("javax.xml.bind:jaxb-api:2.3.1")
-    implementation("org.apache.spark:spark-catalyst_${project.ext.scalaMajorVersion}:$sparkVersion")
-
-    // Scala compiler needs these for arcane reasons, but they are not used in the api nor the runtime
-    compileOnly("com.fasterxml.jackson.core:jackson-annotations:2.6.7")
-    compileOnly("com.google.guava:guava:16.0.1")
-    compileOnly("org.json4s:json4s-jackson_${project.ext.scalaMajorVersion}:3.2.11")
-    compileOnly("org.slf4j:slf4j-api:1.7.6")
-
-    if ('2.10'.equals(scalaMajorVersion)) {
-        implementation("org.apache.spark:spark-unsafe_${project.ext.scalaMajorVersion}:$sparkVersion")
-        implementation("org.apache.avro:avro:1.7.7")
-        implementation("log4j:log4j:1.2.17")
-        implementation("com.google.code.findbugs:jsr305:2.0.1")
-        implementation("org.json4s:json4s-ast_2.10:3.2.10")
-        implementation("com.esotericsoftware.kryo:kryo:2.21")
-        compileOnly("org.apache.hadoop:hadoop-annotations:${project.ext.hadoopVersion}")
-        compileOnly("org.codehaus.jackson:jackson-core-asl:${project.ext.jacksonVersion}")
-        compileOnly("org.codehaus.jackson:jackson-mapper-asl:${project.ext.jacksonVersion}")
-    }
-
-    testImplementation(project(":test:shared"))
-    testImplementation("org.apache.spark:spark-core_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'javax.servlet'
-        exclude group: 'org.apache.hadoop'
-    }
-    testImplementation("org.apache.spark:spark-sql_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'org.apache.hadoop'
-    }
-
-    itestImplementation(project(":test:shared"))
-    itestImplementation("org.apache.spark:spark-streaming_${project.ext.scalaMajorVersion}:$sparkVersion") {
-        exclude group: 'org.apache.hadoop'
-    }
-
-    additionalSources(project(":elasticsearch-hadoop-mr"))
-}
-
-// Export generated Java code from the genjavadoc compiler plugin
-artifacts {
-    sourceElements(project.file("$buildDir/generated/java")) {
-        builtBy compileScala
-    }
-}
-
-jar {
-    dependsOn(project.configurations.embedded)
-    from(project.configurations.embedded.collect { it.isDirectory() ? it : zipTree(it)}) {
-        include "org/elasticsearch/hadoop/**"
-        include "esh-build.properties"
-        include "META-INF/services/*"
-    }
-}
-
-javadoc {
-    dependsOn compileScala
-    source += "$buildDir/generated/java"
-}
-
-scaladoc {
-    title = "${rootProject.description} ${version} API"
-}
-
-if (project.ext.scalaMajorVersion != '2.10') {
-    tasks.withType(ScalaCompile) {
-        scalaCompileOptions.with {
-            additionalParameters = [
-                    "-Xplugin:" + configurations.scalaCompilerPlugin.asPath,
-                    "-P:genjavadoc:out=$buildDir/generated/java".toString()
-            ]
         }
     }
 }
